--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -17,5 +17,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
+
+    implementation 'com.pedropathing:pedro:1.0.5'
 }
 
