--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -3,6 +3,7 @@ repositories {
     google() // Needed for androidx
 
     maven { url = 'https://maven.brott.dev/' }
+    maven { url = 'https://jitpack.io' }
 }
 
 dependencies {
@@ -18,6 +19,5 @@ dependencies {
 
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
 
-    implementation 'com.pedropathing:pedro:1.0.5'
 }
 
